--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "mongodb": "^6.1.0",
+    "mongoose": "^7.5.2",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.30",
