--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-spinners": "^0.13.8",
     "react-sweetalert2": "^0.6.0",
     "react-toastify": "^9.1.3",
+    "stripe": "^13.10.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "uuid": "^9.0.1"
